add_library ( lifefem BCBase.cpp
QuadratureRuleProvider.cpp
BCHandler.cpp
FEDefinitions.cpp
BCInterfaceData0D.cpp
BCManage.cpp
ReferenceFE.cpp
ReferenceFEHdiv.cpp
BCInterfaceData.cpp
ReferenceFEScalar.cpp
DOFLocalPattern.cpp
OneDFSIBCHandler.cpp
QuadratureRule.cpp
CurrentBoundaryFEBase.cpp
OneDFSIBC.cpp
DOF.cpp
BCInterfaceData1D.cpp
CurrentBoundaryFE.cpp
BCIdentifier.cpp
ReferenceFEHybrid.cpp
DOFInterface.cpp
BCDataInterpolator.cpp
BCInterfaceData3D.cpp
BCFunction.cpp
ReferenceElement.cpp
DOFInterface3Dto2D.cpp
BCVector.cpp
DOFInterface3Dto3D.cpp
TimeData.cpp
CurrentFE.cpp
AssemblyElemental.cpp
QuadraturePoint.cpp
GeometricMap.cpp )
install ( TARGETS lifefem DESTINATION lib )
install ( FILES AssemblyElemental.hpp
Assembly.hpp
BCBase.hpp
BCDataInterpolator.hpp
BCFunction.hpp
BCHandler.hpp
BCIdentifier.hpp
BCInterface0D.hpp
BCInterface1D.hpp
BCInterface3D.hpp
BCInterfaceData0D.hpp
BCInterfaceData1D.hpp
BCInterfaceData3D.hpp
BCInterfaceData.hpp
BCInterfaceDefinitions.hpp
BCInterface.hpp
BCManage.hpp
BCManageNormal.hpp
BCVector.hpp
CurrentBoundaryFEBase.hpp
CurrentBoundaryFE.hpp
CurrentFE.hpp
DOF.hpp
DOFInterface3Dto2D.hpp
DOFInterface3Dto3D.hpp
DOFInterface.hpp
DOFLocalPattern.hpp
FEField.hpp
FEFunction.hpp
FESpace.hpp
GeometricMap.hpp
HyperbolicFluxNumerical.hpp
OneDFSIBCHandler.hpp
OneDFSIBC.hpp
PostProcessingBoundary.hpp
QuadraturePoint.hpp
QuadratureRule.hpp
QuadratureRuleProvider.hpp
ReferenceElement.hpp
ReferenceFEHdiv.hpp
ReferenceFE.hpp
ReferenceFEHybrid.hpp
ReferenceFEScalar.hpp
SobolevNorms.hpp
TimeAdvanceBDF.hpp
TimeAdvanceBDFNavierStokes.hpp
TimeAdvanceBDFVariableStep.hpp
TimeAdvance.hpp
TimeAdvanceNewmark.hpp
TimeData.hpp
ZeroDimensionalBCHandler.hpp
ZeroDimensionalBC.hpp DESTINATION include/life/lifefem)
